Add base planner and SplinePlanner

--- a/parameters.yml
+++ b/parameters.yml
@@ -19,7 +19,11 @@ vehicle_dimensions:
 simulation_options:
   dt: 0.1
 
+spline_planner:
+  interpolation_distance: 0.1
+
 pure_pursuit:
   lookahead_distance: 1.0
 
 reference_folder: 'data/path1'
+waypoints_filename: 'data/waypoints/waypoints1.txt'
